Updated header logo and text resizing issue
Text will now disappear if it becomes too squished and the logo will resize with window if required

--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,8 @@ button.timer:disabled {
 }
 
 button#download {
-    padding: 0;
+    padding: 5px;
+    border-radius: 5px;
 }
 
 /* Ids */
@@ -62,7 +63,19 @@ button#download {
     justify-content: center;
     font-size: xxx-large;
     width: 100%;
+    margin-bottom: 10px;
 }
+
+@media(max-width: 1400px){
+    #fedName{
+        display: none;
+    }
+
+    #logo img{
+        max-width:100%;
+    }
+}
+
 
 #playerInput {
     display: flex;
@@ -85,6 +98,10 @@ button#download {
     font-size: 15vw;
 }
 
+#restGameRow{
+
+}
+
 #main-display {
     width: 95%;
     height: 100vh;
@@ -99,6 +116,14 @@ button#download {
       "left-points-control left-points-control left-points-control right-points-control right-points-control right-points-control"
       "left-penalty-control left-penalty-control left-penalty-control right-penalty-control right-penalty-control right-penalty-control"
       "left-pin left-pin left-pin right-pin right-pin right-pin";
+    margin-top: 10px;
+    margin-bottom: 40px;
+}
+
+#footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 
@@ -114,6 +139,7 @@ button#download {
 .blue.playerData {
     text-align: left;
     grid-area: right-score;
+    border-top-right-radius: 30px
 }
 
 .blue.scorebox {
@@ -131,6 +157,7 @@ button#download {
 
 .blue.pin {
     grid-area: right-pin;
+    border-bottom-right-radius: 30px
 }
 
 .buttonsRow {
@@ -256,6 +283,7 @@ button#download {
 .red.playerData {
     text-align: right;
     grid-area: left-score;
+    border-top-left-radius: 30px
 }
 
 .red {
@@ -281,6 +309,7 @@ button#download {
 
 .red.pin {
     grid-area: left-pin;
+    border-bottom-left-radius: 30px
 }
 
 .resetGame {
@@ -289,6 +318,7 @@ button#download {
     margin: 0;
     padding: 0;
     width: 10rem;
+    border-radius: 5px;
 }
 
 .score {
